test/good/arrays/comprehension14.px

print [t for t in 0... step -1, 'w'..'z' step 2]
