test/bad/loops/for13.px

for t in 1..2 step 1, 2 do
    skip
